Update title and add viewport meta tag

--- a/index.html
+++ b/index.html
@@ -2,16 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>3D Periodic Delaunay-Voronoi - Three.js Visualization</title>
-    <script type="importmap">
-    {
-        "imports": {
-            "three": "https://cdn.jsdelivr.net/npm/three@0.164.0/build/three.module.js",
-            "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.164.0/examples/jsm/",
-            "poisson-disk-sampling": "https://esm.sh/poisson-disk-sampling@2.3.0"
-        }
-    }
-    </script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Voronoi Cell Expansion-Shrink Demo X</title>
+    <!-- Physics-based expansion demo -->
     <style>
         body { margin: 0; overflow: hidden; font-family: Arial, sans-serif; }
         #controls {
